CJAL-04/10/2018- Avance vistas Caja General

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Roles/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Roles/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using MVC.Presentacion.Models.Catalogos
-@model  PartialViewModel
+﻿@model MVC.Presentacion.Models.Catalogos.PartialViewModel
 
 @{
     ViewBag.Title = "Index";
@@ -53,15 +52,12 @@
             //    var arr = checkdId.split('_');
             //    var currentCheckboxId = arr[1];
             //    var IsChecked = $("#" + checkId).is(":checked", true);
-
             //    if (Ischecked) {
             //        arrItem.push(currentCheckboxId);
             //    }
             //    alert(arrItem.values);
             //})
-
             //if (arrItem.lenght != 0)
-
             //{
             //    $.ajax({
             //        url: "/Roles/SaveList",
@@ -69,21 +65,12 @@
             //        data: { ItemList: commaSeparated },
             //        success: function (response)
             //        {
-
             //        }
             //    })
-
             //}
-
-            /*********/
-
         });
-
-    });
-
-    $(document).ready(function () {
-        
-        $("#homeRequisicion").click(function () {          
+        $(".hideControl").hide();
+        $("#homeRequisicion").click(function () {
             $('#MovilCompra').css("display", "none");
             $('#SistemaCompra').css("display", "none");
             $('#SistemaCatalogo').css("display", "none");
@@ -97,12 +84,14 @@
             $('#gvwSistemaReq').css("display", "");
             $('#MovilRequsicion').css("display", "");
             $('#SistemaInventario').css("display", "none");
-            
+            $('#btnCatalogo').css("display", "none");
+            $('#btnCompra').css("display", "none");
         });
         $("#homeCatalogos").click(function () {
             $('#MovilCompra').css("display", "none");
             $('#SistemaCompra').css("display", "none");
             $('#SistemaCatalogo').css("display", "");
+            $('#btnCatalogo').css("display", "");            
             $('#window_Compra').css("display", "none");
             $('#window_Ventas').css("display", "none");
             $('#window_Inventario').css("display", "none");
@@ -111,11 +100,11 @@
             $('#tabSisCompra').css("display", "none");
             $('#gvwSistemaReq').css("display", "none");
             $('#catalogos_tabs').css("display", "");
-            $('#MovilCatalogo').css("display", "");            
+            $('#MovilCatalogo').css("display", "");
             $('#MovilRequsicion').css("display", "none");
             $('#SistemaVentas').css("display", "none");
-            $('#MovilVentas').css("display", "none");        
-                        
+            $('#MovilVentas').css("display", "none");
+            $('#btnCompra').css("display", "none");
         });
 
         $("#homeCompra").click(function () {
@@ -124,7 +113,7 @@
             $('#divgvwCompra').css("display", "");
             $('#DivgvwMovilCompra').css("display", "");
             $('#tabSisCompra').css("display", "");
-            $('#SistemaCatalogo').css("display", "none");      
+            $('#SistemaCatalogo').css("display", "none");
             $('#window_Compra').css("display", "");
             $('#window_Ventas').css("display", "none");
             $('#SistemaVentas').css("display", "none");
@@ -132,13 +121,17 @@
             $('#window_Catalogos').css("display", "none");
             $('#hide_divCat').css("display", "none");
             $('#catalogos_tabs').css("display", "none");
-            $('#MovilCatalogo').css("display", "none");           
+            $('#MovilCatalogo').css("display", "none");
             $('#SistemaInventario').css("display", "none");
+            $('#btnCatalogo').css("display", "none");
+            $('#btnCompra').css("display", "");
+            $('#gvwSistemaReq').css("display", "none");
+            $('#MovilRequsicion').css("display", "mone");
         });
-        
+
         $("#homeInventario").click(function () {
             $('#window_Inventario').css("display", "");
-            $('#SistemaInventario').css("display", "");            
+            $('#SistemaInventario').css("display", "");
             $('#MovilCompra').css("display", "none");
             $('#SistemaCompra').css("display", "none");
             $('#SistemaCatalogo').css("display", "none");
@@ -149,15 +142,16 @@
             $('#window_Catalogos').css("display", "none");
             $('#hide_divCat').css("display", "none");
             $('#catalogos_tabs').css("display", "none");
-            $('#MovilCatalogo').css("display", "none");               
+            $('#MovilCatalogo').css("display", "none");
             $('#tabSisCompra').css("display", "none");
             $('#gvwSistemaReq').css("display", "none");
-            $('#MovilRequsicion').css("display", "none");           
+            $('#MovilRequsicion').css("display", "none");
             $('#divgvwCompra').css("display", "none");
-            $('#DivgvwMovilCompra').css("display", "none");             
-         
+            $('#DivgvwMovilCompra').css("display", "none");
+            $('#btnCatalogo').css("display", "none");
+            $('#btnCompra').css("display", "none");
         });
-        
+
         $("#homeVentas").click(function () {
             $('#window_Ventas').css("display", "");
             $('#SistemaVentas').css("display", "");
@@ -167,7 +161,7 @@
             $('#MovilCompra').css("display", "none");
             $('#SistemaCompra').css("display", "none");
             $('#SistemaCatalogo').css("display", "none");
-            $('#window_Compra').css("display", "none");            
+            $('#window_Compra').css("display", "none");
             $('#window_Catalogos').css("display", "none");
             $('#hide_divCat').css("display", "none");
             $('#catalogos_tabs').css("display", "none");
@@ -177,10 +171,10 @@
             $('#MovilRequsicion').css("display", "none");
             $('#divgvwCompra').css("display", "none");
             $('#DivgvwMovilCompra').css("display", "none");
-            
+            $('#btnCatalogo').css("display", "none");
+            $('#btnCompra').css("display", "none");
         });
     });
-
 </script>
 
 <!-- Page Loader -->
@@ -265,16 +259,16 @@
                         <li class="nav-item" id="homeRequisicion"><a class="nav-link" id="homeRequisicion" data-toggle="tab" href="#window_Requsicion"><i class="zmdi zmdi-apps"></i> Requisicion </a></li>
                         <li class="nav-item"><a class="nav-link" id="homeCompra" data-toggle="tab" href="#window_Compra"> <i class="zmdi zmdi-money-box"></i> Compra </a></li>
                         <li class="nav-item"><a class="nav-link" id="homeInventario" data-toggle="tab" href="#window_Inventario"><i class="zmdi zmdi-file"></i> Inventario </a></li>
-                        <li class="nav-item"><a class="nav-link" id="homeVentas"data-toggle="tab" href="#window_Ventas"><i class="zmdi zmdi-money"></i> Ventas </a></li>
+                        <li class="nav-item"><a class="nav-link" id="homeVentas" data-toggle="tab" href="#window_Ventas"><i class="zmdi zmdi-money"></i> Ventas </a></li>
                         <li class="nav-item"><a class="nav-link" id="homeCatalogos" data-toggle="tab" href="#window_Catalogos"><i class="zmdi zmdi-settings-square"></i> Catalogos </a></li>
                     </ul>
-                    <div class="row clearfix">
+                    @*<div class="row clearfix">
                         <div class="col-md-12">
                             <div class="form-group">
                                 <input type="submit" id="btnGuardaP" name="Guardar" value="Guardar" formaction=@Url.Action("GuardarPermisos") formmethod="post" class="btn btn-raised btn-primary float-right" />
                             </div>
                         </div>
-                    </div>
+                    </div>*@
                     <!-- Tab panes -->
                     <div class="tab-content">
                         <!--Compra tab menu-->
@@ -319,8 +313,14 @@
                     </div>
                     <!--Catalogo tab content-->
                     <div class="tab-content">
-                        <div id="SistemaCatalogo" class="tab-pane">
-
+                        <div id="SistemaCatalogo" class="tab-pane">                          
+                            <div class="row clearfix" id="btnCatalogo" >
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <input type="submit" id="btnGuardaP" name="Guardar" value="Guardar" formaction=@Url.Action("GuardarPermisos") formmethod="post" class="btn btn-raised btn-primary float-right" />
+                                    </div>
+                                </div>
+                            </div>
                             <div class="table-responsive" id="hide_divCat">
 
                                 <table class="table table table-bordered table-striped table-hover js-basic-example dataTable" id="ItemList">
@@ -362,9 +362,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-
                                         @Html.EditorFor(m => m.ListaRolesCat)
-
                                     </tbody>
                                 </table>
                             </div>
@@ -377,6 +375,13 @@
                     <!--Compra tab content-->
                     <div class="tab-content">
                         <div id="SistemaCompra" class="tab-pane">
+                            <div class="row clearfix" id="btnCompra">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <input type="submit" id="btnGuardaPCompra" name="Guardar" value="Guardar" formaction=@Url.Action("GuardarPermisosCompra") formmethod="post" class="btn btn-raised btn-primary float-right" />
+                                    </div>
+                                </div>
+                            </div>
                             <div class="table-responsive" id="divgvwCompra">
                                 <table class="table table table-bordered table-striped table-hover js-basic-example dataTable">
                                     <thead>
@@ -398,7 +403,7 @@
                             </div>
                         </div>
                         <div id="MovilCompra" class="tab-pane">
-                          
+
                             <div class="table-responsive" id="DivgvwMovilCompra">
                                 <table id="tabSisCompra" class="table table table-bordered table-striped table-hover js-basic-example dataTable">
                                     <thead>
@@ -459,7 +464,7 @@
                     <!--Requisicion tab content-->
                     <div class="tab-content">
                         <div id="SistemaRequsicion" class="tab-pane">
-                            
+
                             <div class="table-responsive" id="gvwSistemaReq">
                                 <table class="table table table-bordered table-striped table-hover js-basic-example dataTable" name="EmpresasGaseras">
                                     <thead>
@@ -514,7 +519,6 @@
 
                 @if (ViewBag.MessageExito != "" && ViewBag.MessageExito != null)
                 {
-
                     <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-green p-r-35 animated fadeInDown"
                          role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
                          bottom: 20px; left: 0px; right: 0px;">
