--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/ActualizaRoles.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/ActualizaRoles.cshtml
@@ -24,30 +24,26 @@
                     <div class="card">
                         <div class="body">
                             <div class="row clearfix">
-                                <div class="col-lg-8 col-md-8 col-sm-8">
-                                    <div class="form-group">
-                                        <div class="col-lg-8 col-md-8 col-sm-8">                                          
-                                                <input id="Nombre" type="text" name="Nombre" readonly="readonly" class="form-control" value="@((ViewBag.IdUser==null)?"":ViewBag.IdUser[0].Nombre + " " +ViewBag.IdUser[0].Apellido1 + " " +ViewBag.IdUser[0].Apellido2 )" />
-                                                <input type="text" name="IdUsuario" hidden="hidden" value="@ViewBag.IdUser[0].IdUsuario" readonly="readonly" id="IdUsuario" class="form-control" />
-                                      </div>
-                                    </div>
+                                <div class="col-lg-12">
+                                    <input id="Nombre" type="text" name="Nombre" readonly="readonly" class="form-control" value="@((ViewBag.IdUser==null)?"":ViewBag.IdUser[0].Nombre + " " +ViewBag.IdUser[0].Apellido1 + " " +ViewBag.IdUser[0].Apellido2 )" />
+                                    <input type="text" name="IdUsuario" hidden="hidden" value="@ViewBag.IdUser[0].IdUsuario" readonly="readonly" id="IdUsuario" class="form-control" />
                                 </div>
-                            </div><br />
-                            <div class="row clearfix">
-                                <div class="col-lg-8 col-md-8 col-sm-8">
-                                    <div class="form-group">
-                                        <div class="col-lg-8 col-md-8 col-sm-8">
-                                            <select id="ddlRoles" name="IdRol" class="form-control selectpicker z-index show-tick" data-live-search="true">
 
-                                                @foreach (var lst in ViewBag.AllRoles)
-                                                {
-                                                    <option value="@lst.IdRol">@lst.NombreRol</option>
-                                                }
-                                            </select>
-                                        </div>
-                                        <div class="col-lg-4 col-md-4 col-sm-4">
-                                            <button class="btn btn-raised btn-primary float-right" title="Upload file"><i class="glyphicon glyphicon-open-file"></i>  Agregar</button>
-                                        </div>
+                            </div><br />
+                            <div class="col-sm-12">
+                                <div class="row clearfix">
+                                    <div class="col-sm-5">
+                                        <select id="ddlRoles" name="IdRol" class="form-control selectpicker z-index show-tick">
+                                            <option value="0">Seleccione..</option>
+                                            @foreach (var lst in ViewBag.AllRoles)
+                                            {
+                                                <option value="@lst.IdRol">@lst.NombreRol</option>
+                                            }
+                                        </select>
+                                    </div>
+
+                                    <div class="col-sm-3">
+                                        <button class="btn btn-raised btn-primary float-right"> Agregar</button>
                                     </div>
                                 </div>
                             </div>
@@ -66,19 +62,21 @@
                                 </tr>
                             </thead>
                             <tbody>
-                            
-                                    @foreach (var item in @ViewBag.IdUser[0].Roles)
+                                @foreach (var itemUser in @ViewBag.IdUser)
+                                {
+                                    foreach (var item in @ViewBag.IdUser[0].Roles)
                                     {
-                                          
+
                                         <tr>
                                             <th>@item.NombreRol</th>
                                             <td>
-                                                <a ID="lbBorrar" href="@Url.Action("BorrarRol", "Usuarios", new { id = item.IdRol })">
+                                                <a ID="lbBorrar" href="@Url.Action("BorrarRol", "Usuarios", new { id = item.IdRol, idUsr = itemUser.IdUsuario })">
                                                     <i class="material-icons">delete</i>
                                                     <span class="icon-name"></span>
                                                 </a>
                                             </td>
-                                        </tr>                                    
+                                        </tr>
+                                    }
                                 }
                             </tbody>
                         </table>
@@ -90,11 +88,34 @@
                 <div class="row clearfix">
                     <div class="col-lg-3 col-md-3 col-sm-3">
                         <div class="form-group">
-                            <input type="submit" value="Regresar"  formaction=@Url.Action("Index")  class="btn btn-raised btn-primary float-left" />
+                            <input type="submit" value="Regresar" formaction=@Url.Action("Index") class="btn btn-raised btn-primary float-left" />
                         </div>
                     </div>
                 </div>
             </div>
+            @if (ViewBag.MessageExito != "" && ViewBag.MessageExito != null)
+                {
+
+                <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-green p-r-35 animated fadeInDown"
+                     role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
+                         bottom: 20px; left: 0px; right: 0px;">
+                    <a href="#" class="close" data-dismiss="alert" aria-label="close">x</a>
+                    <span data-notify="icon"></span>
+                    <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageExito</span>
+                    <a href="#" target="_blank" data-notify="url"></a>
+                </div>
+            }
+
+            @if (ViewBag.MessageError != "" && ViewBag.MessageError != null)
+                {
+                <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-red p-r-35 animated fadeInDown"
+                     role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
+                         bottom: 20px; left: 0px; right: 0px;">
+                    <a href="#" class="close" data-dismiss="alert" aria-label="close">x</a>
+                    <span data-notify="icon"></span>
+                    <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageError</span><a href="#" target="_blank" data-notify="url"></a>
+                </div>
+            }
         </div>
     </section>
 }
