--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_venta_gas.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_venta_gas.xml
@@ -1,155 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true">
+<android.support.constraint.ConstraintLayout
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".Activity.VentaGasActivity">
 
-    <ScrollView
+    <TextView
+        android:id="@+id/textView4"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:text=""
+        android:textAlignment="center"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
+    <TextView
+        android:id="@+id/TVVentaGasActivityTitulo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/venta_de"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+    <Button
+        android:id="@+id/BtnVentaGasActivityGasLp"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="134dp"
+        android:layout_height="68dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1"
+        android:backgroundTint="@color/colorButtonLogin"
+        android:text="@string/gas_lp"
+        android:textAlignment="center"
+        android:textColor="@color/colorTextButtonLogin"
+        android:textSize="24sp"
+        app:layout_column="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TVVentaGasActivityTitulo"
+        app:layout_row="2"
+        tools:ignore="UnusedAttribute" />
+
+    <Button
+        android:id="@+id/BtnVentaGasActivtiyCilindroConGas"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="135dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_weight="1"
+        android:backgroundTint="@color/colorButtonLogin"
+        android:text="@string/cilindro_con_gas_btn"
+        android:textAlignment="center"
+        android:textColor="@color/colorTextButtonLogin"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TVVentaGasActivityTitulo"
+        tools:ignore="UnusedAttribute" />
+
+    <Button
+        android:id="@+id/BtnVentaGasActivityCilindro"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="135dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1"
+        android:backgroundTint="@color/colorButtonLogin"
+        android:text="@string/cilindro"
+        android:textAlignment="center"
+        android:textColor="@color/colorTextButtonLogin"
+        android:textSize="24sp"
+        app:layout_column="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/BtnVentaGasActivityGasLp"
+        app:layout_row="1"
+        tools:ignore="UnusedAttribute" />
+
+    <Button
+        android:id="@+id/BtnVentaGasActivityOtros"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="135dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_weight="1"
+        android:backgroundTint="@color/colorButtonLogin"
+        android:text="@string/otros"
+        android:textAlignment="center"
+        android:textColor="@color/colorTextButtonLogin"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/BtnVentaGasActivtiyCilindroConGas"
+        tools:ignore="UnusedAttribute" />
+
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="175dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/BtnVentagGasActivtyPagar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/BtnVentaGasActivityCilindro"
+        tools:ignore="NestedScrolling">
+
+        <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:text=""
-                android:textAlignment="center"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/TVVentaGasActivityTitulo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="15dp"
-                android:text="@string/venta_de"
-                android:textSize="18sp" />
-
-            <TableLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:paddingBottom="25dp">
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="5dp">
-
-                    <Button
-                        android:id="@+id/BtnVentaGasActivityGasLp"
-                        style="@style/Widget.AppCompat.Button"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:backgroundTint="@color/colorButtonLogin"
-                        android:padding="25dp"
-                        android:text="@string/gas_lp"
-                        android:textAlignment="center"
-                        android:textColor="@color/colorTextButtonLogin"
-                        android:textSize="24sp"
-                        tools:ignore="UnusedAttribute" />
-
-                    <Button
-                        android:id="@+id/BtnVentaGasActivtiyCilindroConGas"
-                        style="@style/Widget.AppCompat.Button"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:backgroundTint="@color/colorButtonLogin"
-                        android:padding="25dp"
-                        android:text="@string/cilindro_con_gas_btn"
-                        android:textAlignment="center"
-                        android:textColor="@color/colorTextButtonLogin"
-                        android:textSize="24sp"
-                        tools:ignore="UnusedAttribute" />
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="5dp">
-
-                    <Button
-                        android:id="@+id/BtnVentaGasActivityCilindro"
-                        style="@style/Widget.AppCompat.Button"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:backgroundTint="@color/colorButtonLogin"
-                        android:padding="25dp"
-                        android:text="@string/cilindro"
-                        android:textAlignment="center"
-                        android:textColor="@color/colorTextButtonLogin"
-                        android:textSize="24sp"
-                        tools:ignore="UnusedAttribute" />
-
-                    <Button
-                        android:id="@+id/BtnVentaGasActivityOtros"
-                        style="@style/Widget.AppCompat.Button"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:backgroundTint="@color/colorButtonLogin"
-                        android:padding="25dp"
-                        android:text="@string/otros"
-                        android:textAlignment="center"
-                        android:textColor="@color/colorTextButtonLogin"
-                        android:textSize="24sp"
-                        tools:ignore="UnusedAttribute" />
-                </TableRow>
-
-            </TableLayout>
+            android:layout_height="wrap_content">
 
             <TableLayout
                 android:id="@+id/TBVentaGasActivtyTabla"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/BtnVentagGasActivtyPagar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/BtnVentaGasActivityCilindro">
 
             </TableLayout>
-
-            <TableLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp">
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="5dp"
-                    tools:ignore="UselessParent">
-
-                    <Space
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2" />
-
-                    <Button
-                        android:id="@+id/BtnVentagGasActivtyPagar"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:backgroundTint="@color/colorButtonLogin"
-                        android:text="@string/pagar"
-                        android:textColor="@color/colorTextButtonLogin"
-                        android:textSize="24sp"
-                        tools:ignore="UnusedAttribute" />
-                </TableRow>
-
-            </TableLayout>
-
-        </LinearLayout>
+        </HorizontalScrollView>
     </ScrollView>
 
+    <Button
+        android:id="@+id/BtnVentagGasActivtyPagar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_weight="1"
+        android:backgroundTint="@color/colorButtonLogin"
+        android:text="@string/pagar"
+        android:textColor="@color/colorTextButtonLogin"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.961"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="UnusedAttribute" />
+
 </android.support.constraint.ConstraintLayout>
+</ScrollView>
