--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_punto_venta_pagar.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_punto_venta_pagar.xml
@@ -1,216 +1,228 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity.PuntoVentaPagarActivity">
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/PuntoVentaPagarActivityTitulo"
+            <ScrollView
+                android:id="@+id/scrollView4"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="24sp" />
+                android:layout_height="182dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="NestedScrolling">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <TableLayout
-                    android:id="@+id/TLPuntoVentaPagarActivityConceptoHeader"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                </TableLayout>
-
-                <TableLayout
-                    android:id="@+id/TLPuntoVentaPagarActivityConcepto"
-                    android:layout_width="match_parent"
+                <HorizontalScrollView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
-                </TableLayout>
-
-                <ScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    tools:ignore="NestedScrolling">
-
-                </ScrollView>
-            </LinearLayout>
-
-            <TableLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
-
-                    <TextView
-                        android:id="@+id/textView12"
-                        android:layout_width="wrap_content"
+                    <TableLayout
+                        android:id="@+id/TLPuntoVentaPagarActivityConcepto"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/subtotal"
-                        android:textAlignment="textEnd"
-                        android:textSize="24sp" />
+                        tools:ignore="ScrollViewSize">
 
-                    <TextView
-                        android:id="@+id/TVPuntoVentaPagarActivitySubtotal"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:textAlignment="textEnd"
-                        android:textSize="24sp" />
-                </TableRow>
+                    </TableLayout>
+                </HorizontalScrollView>
+            </ScrollView>
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+            <TextView
+                android:id="@+id/textView24"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:layout_marginStart="108dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/subtotal"
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/scrollView4" />
 
-                    <TextView
-                        android:id="@+id/textView14"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/iva_16"
-                        android:textAlignment="textEnd"
-                        android:textSize="24sp" />
+            <TextView
+                android:id="@+id/TVPuntoVentaPagarActivitySubtotal"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:layout_marginStart="104dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="40dp"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/textView24"
+                app:layout_constraintTop_toBottomOf="@+id/scrollView4" />
 
-                    <TextView
-                        android:id="@+id/TVPuntoVentaPagarActivityIva"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:textAlignment="textEnd"
-                        android:textSize="24sp" />
-                </TableRow>
+            <TextView
+                android:id="@+id/TVPuntoVentaPagarActivityIva"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:layout_marginEnd="40dp"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textView28" />
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+            <TextView
+                android:id="@+id/textView30"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="8dp"
+                android:text="@string/total"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toStartOf="@+id/TVPuntoVentaActivityPagarTotal"
+                app:layout_constraintHorizontal_bias="0.569"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView28" />
 
-                    <TextView
-                        android:id="@+id/textView17"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/total"
-                        android:textAlignment="textEnd"
-                        android:textSize="24sp" />
+            <TextView
+                android:id="@+id/textView28"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="@string/iva_16"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toStartOf="@+id/TVPuntoVentaPagarActivityIva"
+                app:layout_constraintHorizontal_bias="0.43"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView24" />
 
-                    <TextView
-                        android:id="@+id/TVPuntoVentaPagarActivityTotal"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:textAlignment="textEnd"
-                        android:textSize="24sp" />
-                </TableRow>
+            <TextView
+                android:id="@+id/TVPuntoVentaActivityPagarTotal"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:layout_marginEnd="40dp"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textView30" />
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+            <Switch
+                android:id="@+id/SPuntoVentaPagarActivityFactura"
+                android:layout_width="wrap_content"
+                android:layout_height="27dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:checked="true"
+                android:text="@string/factura"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toStartOf="@+id/SPuntoVentaActivityCredito"
+                app:layout_constraintHorizontal_bias="0.101"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView30" />
 
-                    <Switch
-                        android:id="@+id/SWPuntoVentaPagarActivityFactura"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:checked="true"
-                        android:text="@string/factura"
-                        android:textAlignment="textEnd"
-                        android:textSize="24sp" />
+            <Switch
+                android:id="@+id/SPuntoVentaActivityCredito"
+                android:layout_width="wrap_content"
+                android:layout_height="27dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:text="@string/credito"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/TVPuntoVentaActivityPagarTotal" />
 
-                    <Switch
-                        android:id="@+id/SWPuntoVentaPagarActivityCredito"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/credito"
-                        android:textAlignment="textEnd"
-                        android:textSize="24sp" />
+            <TextView
+                android:id="@+id/textView32"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="80dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="8dp"
+                android:text="@string/efectivo"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toStartOf="@+id/ETPuntoVentaPagarActivityEfectivo"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/SPuntoVentaPagarActivityFactura" />
 
-                </TableRow>
+            <EditText
+                android:id="@+id/ETPuntoVentaPagarActivityEfectivo"
+                android:layout_width="144dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:autofillHints=""
+                android:ems="10"
+                android:inputType="numberDecimal"
+                app:layout_constraintBottom_toTopOf="@+id/BtnPuntoVentaPagarActivityConfirmar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/SPuntoVentaActivityCredito"
+                app:layout_constraintVertical_bias="0.314"
+                tools:ignore="LabelFor"
+                tools:targetApi="o" />
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+            <Button
+                android:id="@+id/BtnPuntoVentaPagarActivityOpciones"
+                android:layout_width="94dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:backgroundTint="@color/colorButtonLogin"
+                android:text="@string/opciones"
+                android:textColor="@color/colorTextButtonLogin"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/BtnPuntoVentaPagarActivityCancelar"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView32"
+                tools:ignore="UnusedAttribute" />
 
-                    <TextView
-                        android:id="@+id/textView19"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/efectivo"
-                        android:textAlignment="textEnd"
-                        android:textSize="24sp" />
+            <Button
+                android:id="@+id/BtnPuntoVentaPagarActivityCancelar"
+                android:layout_width="97dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:backgroundTint="@color/colorButtonLogin"
+                android:text="@string/message_cancel"
+                android:textColor="@color/colorTextButtonLogin"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/BtnPuntoVentaPagarActivityConfirmar"
+                app:layout_constraintStart_toEndOf="@+id/BtnPuntoVentaPagarActivityOpciones"
+                app:layout_constraintTop_toBottomOf="@+id/ETPuntoVentaPagarActivityEfectivo"
+                app:layout_constraintVertical_bias="0.0"
+                tools:ignore="UnusedAttribute" />
 
-                    <EditText
-                        android:id="@+id/ETPuntoVentaActivityEfectivo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="numberDecimal"
-                        android:autofillHints="" />
+            <Button
+                android:id="@+id/BtnPuntoVentaPagarActivityConfirmar"
+                android:layout_width="105dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:backgroundTint="@color/colorButtonLogin"
+                android:text="@string/confirmar"
+                android:textColor="@color/colorTextButtonLogin"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/BtnPuntoVentaPagarActivityCancelar"
+                app:layout_constraintTop_toBottomOf="@+id/textView32"
+                app:layout_constraintVertical_bias="1.0"
+                tools:ignore="UnusedAttribute" />
 
-                </TableRow>
-            </TableLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <Button
-                    android:id="@+id/BtnPuntoVentaPagarOpciones"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginTop="0dp"
-                    android:backgroundTint="@color/colorButtonLogin"
-                    android:text="@string/opciones"
-                    android:textColor="@color/colorTextButtonLogin"
-                    tools:ignore="UnusedAttribute" />
-
-                <Button
-                    android:id="@+id/BtnPuntoVentaPagarActivityCancelar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="0dp"
-                    android:backgroundTint="@color/colorButtonLogin"
-                    android:text="@string/message_cancel"
-                    android:textColor="@color/colorTextButtonLogin"
-                    tools:ignore="UnusedAttribute" />
-
-                <Button
-                    android:id="@+id/BtnPuntoVentaPagarActivityConfirmar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginEnd="33dp"
-                    android:backgroundTint="@color/colorButtonLogin"
-                    android:text="@string/confirmar"
-                    android:textColor="@color/colorTextButtonLogin"
-                    tools:ignore="UnusedAttribute" />
-            </RelativeLayout>
-
-        </LinearLayout>
+        </android.support.constraint.ConstraintLayout>
     </ScrollView>
+
 </android.support.constraint.ConstraintLayout>
